--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -230,3 +230,15 @@
       margin: 5px;
     }
   }
+
+  // transition
+
+.fade-enter {
+  opacity: 0;
+  z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 250ms ease-in;
+}
